SERVER-8021: on v8 OOM, throw instead of abort